# nged

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .tasks  CMakeLists.txt  CMakePresets.json  README.md  features.txt  gmath.h  ngdoc.cpp  ngdoc.h  ngdraw.cpp  nged.cpp  nged.h  nged_imgui.cpp  nged_imgui.h  nged_imgui_fonts.cpp  ngpy.cpp  ngpy.h  pybind11_imgui.cpp  pyproject.toml  setup.py  style.cpp  style.h  utils.h  xmake.lua
demo/: main.cpp
entry/: dx11_main.cpp  dx11_texture.cpp  dx12_main.cpp  dx12_texture.cpp  entry.cpp  entry.h  gl2_main.cpp  gl3_main.cpp  texture.h  vulkan_main.cpp  vulkan_texture.cpp  vulkan_texture.h
examples/: CMakeLists.txt
examples/demo/: main.cpp
examples/ngs7/: README.md  icon.rc  main.cpp  mus-config.h  ngs7.cpp  ngs7.h  s7-extensions.cpp  s7-extensions.h  s7e.cpp
examples/ngs7/examples/: bf.scm
examples/pydemo/: dataview.py  edresponse.py  evaluation.py  libnumpy.py  main.py  node.py  nodelib.py
examples/pydemo/examples/: pydemo-merge-licenses.ng
examples/typed_demo/: main.cpp
include/nged/: gmath.h  ngdoc.h  nged.h  nged_imgui.h  ngpy.h  pybind11_imgui.h  style.h  utils.h
include/nged/entry/: entry.h
include/nged/res/: fa_icondef.h
nged/: ImGui.py  __init__.py  msghub.py
ngs7/: icon.rc  main.cpp  mus-config.h  ngs7.cpp  ngs7.h  s7-extensions.cpp  s7-extensions.h  s7.c  s7.h  s7e.cpp
ngs7/examples/: bf.scm
patches/: imgui_impl_metal.patch  s7.patch  sol2.patch
pydemo/: document.py  evaluation.py  graph.py  icondef.py  libpandas.py  main.py  node.py
python/: CMakeLists.txt  bin2c.py
res/: sourcecodepro.hpp
scripts/: build_stubs.py
src/: CMakeLists.txt  ngdoc.cpp  ngdraw.cpp  nged.cpp  nged_imgui.cpp  nged_imgui_fonts.cpp  ngpy.cpp  pybind11_imgui.cpp  style.cpp
src/entry/: dx11_texture.cpp  dx11_texture.h  dx12_texture.h  entry.cpp  gl3_main.cpp  gl_texture.cpp  metal_main.mm  metal_texture.mm  vulkan_texture.h
src/res/: fa_solid.hpp  licenses.inl
tests/: CMakeLists.txt  graph_tests.cpp  main.cpp  pytest.py  uitest.py  utils_tests.cpp
typed_demo/: main.cpp
