[build-system]
requires = ["scikit-build-core>=0.10.0", "pybind11>=2.13.0"]
build-backend = "scikit_build_core.build"

[project]
name = "nged"
version = "1.0.0"
description = "A Node Graph Editor with Python bindings"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "nged contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
]
keywords = ["node-graph", "editor", "ui", "visualization"]

[project.urls]
Homepage = "https://github.com/hugeproblem/nged"

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.minimum-version = "3.15"
cmake.args = ["-DPYTHON_EXECUTABLE={python.executable}"]
wheel.install-dir = "nged"
cmake.build-type = "Release"
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "CMakeLists.txt"
metadata.version.regex = "project\\(nged VERSION ([0-9.]+)"

[tool.scikit-build.cmake.define]
# BACKEND = "dx11"

[tool.scikit-build.install]
components = ["nged_python"]

[tool.scikit-build.sdist]
exclude = ["screenshots"]

[[tool.scikit-build.generate]]
path = "nged/_version.py"
template = '''
__version__ = "${version}"
'''